--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=Write API URL
+REACT_APP_API_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=AIzaSyAyDgCpCNy8u0YhlWVr3UcSo_fXK_mdqek
