--- a/client2/package.json
+++ b/client2/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "flowbite-react patch"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -15,9 +16,13 @@
     "@mui/material": "^7.1.1",
     "@mui/styled-engine-sc": "^7.1.1",
     "@tailwindcss/vite": "^4.1.8",
+    "bootstrap": "^5.3.6",
+    "flowbite-react": "^0.11.8",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-responsive-carousel": "^3.2.23",
     "styled-components": "^6.1.18",
     "tailwindcss": "^4.1.8"
   },
