--- a/client2/package.json
+++ b/client2/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.6",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.18",
     "tailwindcss": "^4.1.8"
   },
