--- a/client2/package.json
+++ b/client2/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.1.1",
     "@mui/styled-engine-sc": "^7.1.1",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.6",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
@@ -24,6 +25,7 @@
     "react-multi-carousel": "^2.8.6",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.6.2",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.18",
     "tailwindcss": "^4.1.8"
   },
