--- a/client2/package.json
+++ b/client2/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
     "styled-components": "^6.1.18",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
