--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,17 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^11.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@lexical/react": "^0.33.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.1.1",
     "@mui/styled-engine-sc": "^7.1.1",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.6",
+    "lexical": "^0.33.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
